@@ -2819,6 +2819,7 @@ packForPush (iCode * ic, eBBlock ** ebpp, int blockno)
   iCode *dic, *lic;
   bitVect *dbv;
   struct eBBlock *ebp = ebpp[blockno];
+  int disallowHiddenAssignment = 0;
 
   if (ic->op != IPUSH || !IS_ITEMP (IC_LEFT (ic)))
     return;
@@ -2864,12 +2865,20 @@ packForPush (iCode * ic, eBBlock ** ebpp, int blockno)
 
   if (IS_SYMOP (IC_RIGHT (dic)))
     {
+      if (IC_RIGHT (dic)->isvolatile)
+        return;
+
+      if (OP_SYMBOL (IC_RIGHT (dic))->addrtaken || isOperandGlobal (IC_RIGHT (dic)))
+        disallowHiddenAssignment = 1;
+
       /* make sure the right side does not have any definitions
          inbetween */
       dbv = OP_DEFS (IC_RIGHT (dic));
       for (lic = ic; lic && lic != dic; lic = lic->prev)
         {
           if (bitVectBitValue (dbv, lic->key))
+            return;
+          if (disallowHiddenAssignment && (lic->op == CALL || lic->op == PCALL || POINTER_SET (lic)))
             return;
         }
       /* make sure they have the same type */
